--- a/composes/docker-compose.yml
+++ b/composes/docker-compose.yml
@@ -1,12 +1,15 @@
 version: "3"
 services:
   sass:
-    image: "debian:stable"
+    image: "sassv1"
     ports:
-      - "80:80"
-      - "443:443"
-      - "5000:5000"
+      - "80:5000"
     networks: 
+      - backend
+
+  mongo:
+    image: "mongosass"
+    networks:
       - backend
 networks:
   backend:
