--- a/files/web/dockerfile
+++ b/files/web/dockerfile
@@ -1,9 +1,11 @@
 FROM debian:stable AS sass
-RUN apt-get update && apt-get install -y locales git curl && rm -rf /var/lib/apt/lists/* \
+RUN apt-get update && apt-get install -y locales git curl openssl && rm -rf /var/lib/apt/lists/* \
         && curl -sL https://deb.nodesource.com/setup_14.x | bash - && apt install -y nodejs \
         && localedef -i es_ES -c -f UTF-8 -A /usr/share/locale/locale.alias es_ES.UTF-8
 WORKDIR /etc
 COPY ./Backend ./Backend
+WORKDIR /etc/Backend/certs
+RUN openssl req -x509 -newkey rsa:4096 -keyout key.pem -out cert.pem -nodes -days 365 -subj "/C=ES/ST=Spain/L=Barcelona/O=sass Name/OU=Org/CN=www.example.com"
 WORKDIR /etc/Backend
 RUN npm install
 ENV LANG es_ES.utf8
