--- a/composes/docker-compose1.yml
+++ b/composes/docker-compose1.yml
@@ -12,6 +12,8 @@ services:
   mongo:
     container_name: mongosass
     image: "a19matrivort/mongosass"
+    ports:
+      - "27017:27017"
     networks:
       backend:
         ipv4_address: 10.5.0.6
